# dsa

./: .clang-format  .gitignore  CMakeLists.txt
.gitea/workflows/: mirror.yml
include/algorithms/: insertion_sort.h
include/data_structures/: linkedlist_int.h
include/utils/: array_utils.h  print_array.h  swap.h
src/: CMakeLists.txt
src/algorithms/: insertion_sort.c
src/data_structures/: linkedlist_int.c
src/utils/: array_utils.c  print_array.c  swap.c
tests/: CMakeLists.txt  test_insertion_sort.c  test_linkedlist_int.c
